# jfterm-muxer

./: Cargo.toml  justfile
core/: Cargo.toml
core/src/: engine.rs  lib.rs  ring.rs  scanner.rs  status.rs  sticky.rs
core/tests/: oracle.rs
docs/: PROTOCOL-v1.md  sequence-coverage-backlog.md
docs/superpowers/plans/: 2026-06-01-jftermd-core-engine.md  2026-06-01-jftermd-daemon-b1-protocol-pty-session.md  2026-06-01-jftermd-daemon-b2-server-daemonize.md  2026-06-01-jftermd-daemon-b3-spec-catchup.md
jftermd/: Cargo.toml
jftermd/src/: daemonize.rs  lib.rs  main.rs  protocol.rs  pty.rs  registry.rs  server.rs  session.rs  socket.rs
jftermd/tests/: integration.rs
src/: engine.rs  lib.rs  scanner.rs  status.rs  sticky.rs
