# nix = 0.31.3
[package]
name = "jftermd"
version = "0.1.0"
edition = "2024"

[dependencies]
jftermd-core = { path = "../core" }
libc = "0.2.186"
nix = { version = "0.31.3", features = ["term", "process", "signal", "ioctl", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
