# nix = 0.31.3
[package]
name = "jftermd"
version = "0.1.0"
edition = "2024"

[dependencies]
jftermd-core = { path = "../core" }
libc = "0.2.186"
nix = { version = "0.31.3", features = ["term", "process", "signal", "ioctl", "fs", "socket"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "signal", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "jftermd"
path = "src/main.rs"
